src/jquery.grid-composer.css
/**
 * jQuery Grid Composer
 *   
 *  @package    app.css
 *  @category   jquery plugin
 *  @author     Rafael F. Silva <rafaelfsilva1@gmail.com>
 *  @copyright  
 *  @link       /src/jquery.grid-composer.css
 *  @since      0.0.0
**/

.gc-components {
	position: relative;
	z-index: 1;
}

.gc-components:after {
	content: '';
	clear: both;
	display: block;
}

.gc-components .gc-component-item {
	float: left;
	position: relative;
}

.gc-components .gc-component-item[class*="gc-resize"] {
	overflow: hidden;
}

.gc-components .gc-component-item img {
	display: block;
	position: absolute;
}

.gc-grid {
	position: relative;
}

.gc-grid .gc-grid-helper {
	left: 0;
	opacity: 0.4;
	position: absolute;
	top: 0;
}

.gc-grid .gc-grid-helper div {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border: 1px dashed #C0C0C0;
	float: left;
}

.gc-grid .gc-grid-item {
	position: absolute;
}

.gc-grid .gc-grid-item img {
	display: block;
	position: absolute;
}

.gc-grid .gc-grid-item span {
	display: inline-block;
	position: relative;
	text-align: center;
	vertical-align: middle;
	width: 100%;
}

.gc-grid .gc-grid-item:after {
	content: '';
	height: 100%;
	display: inline-block;
	vertical-align: middle;
}

.gc-grid .gc-grid-item[class*="gc-resize"] {
	overflow: hidden;
}

.gc-grid .gc-grid-item .ui-resizable-n,
.gc-grid .gc-grid-item .ui-resizable-nw,
.gc-grid .gc-grid-item .ui-resizable-ne {
	top: 0;
}

.gc-grid .gc-grid-item .ui-resizable-s,
.gc-grid .gc-grid-item .ui-resizable-sw,
.gc-grid .gc-grid-item .ui-resizable-se {
	bottom: 0;
}

.gc-grid .gc-grid-item .ui-resizable-w,
.gc-grid .gc-grid-item .ui-resizable-nw,
.gc-grid .gc-grid-item .ui-resizable-sw {
	left: 0;
}

.gc-grid .gc-grid-item .ui-resizable-e,
.gc-grid .gc-grid-item .ui-resizable-ne,
.gc-grid .gc-grid-item .ui-resizable-se {
	right: 0;
}

.gc-grid .gc-grid-item .ui-resizable-w,
.gc-grid .gc-grid-item .ui-resizable-e,
.gc-grid .gc-grid-item .ui-resizable-ne,
.gc-grid .gc-grid-item .ui-resizable-nw,
.gc-grid .gc-grid-item .ui-resizable-se,
.gc-grid .gc-grid-item .ui-resizable-sw  {
	width: 20px;
}

.gc-grid .gc-grid-item .ui-resizable-n,
.gc-grid .gc-grid-item .ui-resizable-s,
.gc-grid .gc-grid-item .ui-resizable-ne,
.gc-grid .gc-grid-item .ui-resizable-nw,
.gc-grid .gc-grid-item .ui-resizable-se,
.gc-grid .gc-grid-item .ui-resizable-sw {
	height: 20px;
}

